# github_analysis

./: README.md  code.py  pyproject.toml  test.py
knowledge/: user_preference.txt
src/github_analysis/: crew.py  main.py
src/github_analysis/config/: agents.yaml  tasks.yaml
