[project]
name = "github_analysis"
version = "0.1.0"
description = "github-analysis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
github_analysis = "github_analysis.main:run"
run_crew = "github_analysis.main:run"
train = "github_analysis.main:train"
replay = "github_analysis.main:replay"
test = "github_analysis.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
